<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="Mc_Global" Id="{5642ad69-83f7-4656-9927-4be704aafe8e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	PowerOn:				BOOL;
	MotionPowerOn:			BOOL;

	PowerOnFdbk:			BOOL; //power feedback
	MotionPowerOnFdbk:		BOOL; //power feedback

 

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>